--- a/admin/src/web/templates/jya/index.html
+++ b/admin/src/web/templates/jya/index.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <h1 style="color: #007bff; margin-bottom: 20px;">Jinetes y Amazonas</h1>
-<p style="margin-bottom: 20px;">Página de presentación de jinetes y amazonas</p>
+<p style="margin-bottom: 20px;">Página de inicio de jinetes y amazonas</p>
 
 
 <!-- Formulario de búsqueda -->
