Termino filtro, ordenación y css (más o menos) de los documentos del jya

--- a/admin/src/web/templates/jya/add_document.html
+++ b/admin/src/web/templates/jya/add_document.html
@@ -14,7 +14,7 @@
     </div>
     <div class="mb-3"></div>
     <label for="document_type" class="form-label">Tipo de documento</label>
-    <select id="document_type" name="document_type" class="form-control">
+    <select id="document_type" name="document_type" class="form-control" required>
         <option value="Entrevista">Entrevista</option>
         <option value="Evaluación">Evaluación</option>
         <option value="Planificaciones">Planificaciones</option>
