Agrego template create y permito borrar un jya

--- a/admin/src/web/templates/jya/index.html
+++ b/admin/src/web/templates/jya/index.html
@@ -43,7 +43,7 @@
     style="background-color: #6c757d; border-color: #6c757d;">Limpiar filtros</a>
 </form>
 
-<a href="{{ url_for('team.create') }}" class="btn btn-primary" style="margin-top: 10px; margin-bottom: 20px;">
+<a href="{{ url_for('jya.create') }}" class="btn btn-primary" style="margin-top: 10px; margin-bottom: 20px;">
   <i class="fas fa-user-plus"></i> Crear nuevo Jinete/Amazona
 </a>
 
